<resources>
    <string name="app_name">Assignment-5-Week-4</string>
    <string name="survey">Survey</string>
    <string name="food_preferences">Food Preferences</string>
    <string name="dietary_habits">Dietary Habits</string>
    <string name="start_survey">Start Survey</string>
    <string name="what_is_your_favorite_cuisine">What is your favorite cuisine?</string>
    <string name="chinese">Chinese</string>
    <string name="how_often_do_you_eat_out">How often do you eat out?</string>
    <string name="never">Never</string>
    <string name="rarely">Rarely</string>
    <string name="sometimes">Sometimes</string>
    <string name="frequently">Frequently</string>
    <string name="do_you_prefer_spicy_food">Do you prefer spicy food?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_prefer_vegetarian_food">Do you prefer vegetarian food?</string>
    <string name="do_you_like_seafood">Do you like seafood?</string>
    <string name="submit">submit</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>
    <string name="indian">Indian</string>
    <string name="japanese">Japanese</string>
    <string name="thai">Thai</string>
    <string name="turkish">Turkish</string>
    <string name="are_you_vegetarian">Are you vegetarian?</string>
    <string name="do_you_consume_dairy_products">Do you consume dairy products?</string>
    <string name="do_you_eat_fast_food">Do you eat fast food?</string>
    <string name="do_you_have_any_food_allergies">Do you have any food allergies?</string>
    <string name="do_you_prefer_organic_food">Do you prefer organic food?</string>
    <string name="view_cart">View Cart</string>
    <string name="pimage">pImage</string>
    <string name="logoimage">logoImage</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="electronic_gadgets">Electronic Gadgets</string>
    <string name="food_preferences_survey">Food Preferences Survey</string>
    <string name="please_select_one_of_the_button">Please Select one of the Button</string>
</resources>