<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".problem_1.screen.FoodPreferencesActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/food_preferences"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationY="25dp"
            android:paddingBottom="100dp"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/favourite_cuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_your_favorite_cuisine"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <RadioGroup
                android:id="@+id/first_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/favourite_cuisine">

                <RadioButton
                    android:id="@+id/chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/chinese" />

                <RadioButton
                    android:id="@+id/french"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/french" />

                <RadioButton
                    android:id="@+id/italian"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/italian" />

                <RadioButton
                    android:id="@+id/indian"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/indian" />

                <RadioButton
                    android:id="@+id/japanese"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/japanese" />

                <RadioButton
                    android:id="@+id/thai"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/thai" />

                <RadioButton
                    android:id="@+id/turkish"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/turkish" />
            </RadioGroup>

            <TextView
                android:id="@+id/second_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/how_often_do_you_eat_out"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_radioGroup" />

            <RadioGroup
                android:id="@+id/second_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/second_textView">

                <RadioButton
                    android:id="@+id/never"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/never" />

                <RadioButton
                    android:id="@+id/rarely"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/rarely" />

                <RadioButton
                    android:id="@+id/sometimes"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/sometimes" />

                <RadioButton
                    android:id="@+id/frequently"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/frequently" />

            </RadioGroup>

            <TextView
                android:id="@+id/third_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/do_you_prefer_spicy_food"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_radio_group" />

            <RadioGroup
                android:id="@+id/third_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/third_textView">

                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/fourth_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/do_you_prefer_vegetarian_food"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/third_radio_group" />

            <RadioGroup
                android:id="@+id/fourth_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fourth_textView">

                <RadioButton
                    android:id="@+id/yesVegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/noVegetarian"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/fifth_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/do_you_like_seafood"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fourth_radio_group" />

            <RadioGroup
                android:id="@+id/fifth_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fifth_textView">

                <RadioButton
                    android:id="@+id/yesSeaFood"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/noSeaFood"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/no" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/fifth_radio_group" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/firstConstrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/submit">

                <TextView
                    android:id="@+id/firstQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/secondConstrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/firstConstrain">

                <TextView
                    android:id="@+id/secondQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/thirdConstrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/secondConstrain">

                <TextView
                    android:id="@+id/thirdQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fourthConstrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/thirdConstrain">

                <TextView
                    android:id="@+id/fourthQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fifthConstrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fourthConstrain">

                <TextView
                    android:id="@+id/fifthQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>