<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraint_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/pImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/pimage"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ipad_logo"
        android:contentDescription="@string/logoimage"
        app:layout_constraintStart_toEndOf="@+id/pImage"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/pImage"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addButton"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/price"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/description" />
</androidx.constraintlayout.widget.ConstraintLayout>