<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".problem_1.screen.DietaryHabitsSurveyActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/dietary_habits"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/first_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/are_you_vegetarian"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <RadioGroup
                android:id="@+id/first_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/first_textView">

                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/second_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/do_you_prefer_organic_food"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_radio_group"
                tools:ignore="MissingConstraints" />

            <RadioGroup
                android:id="@+id/second_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/second_textView">

                <RadioButton
                    android:id="@+id/yesOrganic"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/noOrganic"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/third_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/do_you_consume_dairy_products"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_radio_group"
                tools:ignore="MissingConstraints" />

            <RadioGroup
                android:id="@+id/third_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/third_textView">

                <RadioButton
                    android:id="@+id/yesDairyProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/noDairyProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/fourth_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/do_you_eat_fast_food"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/third_radio_group"
                tools:ignore="MissingConstraints" />

            <RadioGroup
                android:id="@+id/fourth_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fourth_textView">

                <RadioButton
                    android:id="@+id/yesFastFood"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/noFastFood"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/fifth_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/do_you_have_any_food_allergies"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fourth_radio_group"
                tools:ignore="MissingConstraints" />

            <RadioGroup
                android:id="@+id/fifth_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fifth_textView">

                <RadioButton
                    android:id="@+id/yesFoodAllergies"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/noFoodAllergies"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/no" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/fifth_radio_group" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/firstConstrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/submit">

                <TextView
                    android:id="@+id/firstQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/secondConstrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/firstConstrain">

                <TextView
                    android:id="@+id/secondQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/thirdConstrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/secondConstrain">

                <TextView
                    android:id="@+id/thirdQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fourthConstrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/thirdConstrain">

                <TextView
                    android:id="@+id/fourthQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fifthConstrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fourthConstrain">

                <TextView
                    android:id="@+id/fifthQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>